# minimals

./: .gitignore  LICENSE  README  README.md  pyproject.toml
docs/: api_reference.rst  changelog.rst  common_use_cases.rst  conf.py  contribute.rst  first_steps.rst  going_further.rst  index.rst
minimals/: __init__.py  __main__.py  constants.py  functions.py
tests/: test_constants.py  test_functions.py
